# ocrd_detectron2

./: .dockerignore  .gitignore  .pylintrc  CHANGELOG.md  Dockerfile  Gemfile  Makefile  README.md  gen-test-results-table.sh  ocrd-tool.json  pyproject.toml  requirements-test.txt  requirements.txt  requirements_src.txt  setup.py  test-results.md
.github/workflows/: docker-image.yml  jekyll-gh-pages.yml  python-app.yml
ocrd_detectron2/: cli.py  ocrd-tool.json  predictor.py  presets_DocBank_X101.json  presets_DocBank_X101_page.json  presets_Jambo-sudo_X101.json  presets_Math_R50.json  presets_NewspaperNavigator_R50.json  presets_PRImALayout_R50.json  presets_PubLayNet_R101.json  presets_PubLayNet_R101_JPLeoRX.json  presets_PubLayNet_R50.json  presets_PubLayNet_R50_JPLeoRX.json  presets_PubLayNet_X101.json  presets_TableBank_X152.json  presets_TableBank_X152_Psarpei.json  segment.py
test-results/column-samples/data/: test-result
test-results/column-samples/data/OCR-D-SEG-DocBank_X101/: OCR-D-SEG-DocBank_X101-bengel_abriss01_1751-0007.xml  OCR-D-SEG-DocBank_X101-corvinus_frauenzimmer_1715-0054.xml  OCR-D-SEG-DocBank_X101-dannhauer_catechismus04_1653-0585.xml  OCR-D-SEG-DocBank_X101-eiteritz_affe_1719-0206.xml  OCR-D-SEG-DocBank_X101-fleming_jaeger01_1719-0117.xml
test-results/column-samples/data/OCR-D-SEG-Jambo-sudo_X101/: OCR-D-SEG-Jambo-sudo_X101-bengel_abriss01_1751-0007.xml  OCR-D-SEG-Jambo-sudo_X101-corvinus_frauenzimmer_1715-0054.xml  OCR-D-SEG-Jambo-sudo_X101-dannhauer_catechismus04_1653-0585.xml  (+2 more)
test-results/gutachten/data/: test-result
(+35 files in other folders)
