[build-system]
requires = ["setuptools>=61.0.0", "wheel", "setuptools-ocrd"]

[project]
name = "ocrd_detectron2"
authors = [
    {name = "Robert Sachunsky", email = "sachunsky@informatik.uni-leipzig.de"},
    {name = "Julian Balling", email = "balling@infai.org"},
]
description = "OCR-D wrapper for detectron2 based segmentation models"
readme = "README.md"
license.text = "MIT"
requires-python = ">=3.8"

dynamic = ["version", "dependencies"]

# https://pypi.org/classifiers/
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Intended Audience :: Other Audience",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Topic :: Text Processing",
]

[project.scripts]
ocrd-detectron2-segment = "ocrd_detectron2.cli:ocrd_detectron2_segment"

[project.urls]
Homepage = "https://github.com/bertsky/ocrd_detectron2"
Repository = "https://github.com/bertsky/ocrd_detectron2.git"

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}
optional-dependencies.test = {file = ["requirements-test.txt"]}

[tool.setuptools]
packages = ["ocrd_detectron2"]
package-data = {"*" = ["*.json"]}

[tool.coverage.run]
branch = true
source = ["ocrd_detectron2"]
